# game

./: .gitignore  CMakeLists.txt  PNM.md  README.md  bug.md  main.cpp  todo.md  ~$课设需求分析.docx  解决问题.md  课设需求分析.docx
UML/: Character.puml  Client.puml  Game.puml  GameLoop.puml  Item.puml  Map.puml  Mission.puml  Monster.puml  NPC.puml  Player.puml
data/: armor.txt  buff.txt  characterStatus.txt  commands.txt  drug.txt  initNPC.txt  initShop.txt  items.txt  map.txt  mission.txt  monsterStatus.txt  monsters.txt  nameId.txt  npcs.txt  scene1.txt  scene2.txt  scene3.txt  scene4.txt  scene5.txt  scene6.txt  scene7.txt  scene8.txt  scene9.txt  shop.txt  skill.txt  weapon.txt
save/: saveMission.txt  saveNPC.txt  savePlayerAttribute.txt  saveStatus.txt  shop.txt
src/: Armor.h  Buff.h  Character.cpp  Character.h  Client.cpp  Client.h  Command.h  Data.h  Drug.h  GameLoop.cpp  GameLoop.h  Item.cpp  Item.h  Map.cpp  Map.h  Mission.cpp  Mission.h  MissionItem.h  Monster.h  NPC.h  Package.cpp  Package.h  Player.h  Scene.cpp  Scene.h  Shop.h  Skill.cpp  Skill.h  Status.cpp  Status.h  Tool.cpp  Tool.h  UI.cpp  UI.h  Weapon.h  global.h  templateHeader.h
